--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
             <artifactId>log4j-api</artifactId>
             <version>2.14.1</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>log4j</groupId>-->
-<!--            <artifactId>log4j</artifactId>-->
-<!--            <version>1.2.17</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
         <dependency>
             <groupId>io.cucumber</groupId>
